--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,26 +10,27 @@
 
     <EditText
         android:id="@+id/adhar"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
         android:ems="10"
-        android:hint="Enter first 5 aadhar numbers"
-        android:inputType="textPersonName"
+        android:hint="First 5 aadhar numbers"
+        android:inputType="number"
+
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="83dp" />
 
     <EditText
         android:id="@+id/consumer"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:layout_below="@id/adhar"
         android:layout_centerInParent="true"
-        android:hint="Enter last 5 consumer numbers"
+        android:hint="Last 5 consumer numbers"
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="166dp" />
 
@@ -37,10 +38,10 @@
         android:id="@+id/sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/consumer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
         android:text="Sync"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/consumer"
-        android:layout_centerInParent="true"
         tools:layout_editor_absoluteX="163dp"
         tools:layout_editor_absoluteY="271dp" />
 
